# PytDm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Money.py  README.md  download.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
